# mgccli-tests

./: .gitignore  Makefile  README.md  action-example-usage.yml  action.yml  main.py  pyproject.toml
.github/workflows/: test-cli-v2.yml  test-on-pr.yml
tests/: test_auth.py  test_block.py  test_config.py  test_dbaas.py  test_general.py  test_lbaas.py  test_network.py  test_object.py  test_profile.py  test_regression.py  test_vm.py  test_workspace.py  utils.py
