[project]
name = "mgccli-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "pytest-html>=4.1.1",
]
authors = [
    { name = "Luiz Cavalcanti", email = "<luiz.cavalcanti@luizalabs.com>" },
    { name = "Chrystian R. Campos", email = "<chrystian1.camp@luizalabs.com>" }
]
